intial commit, prior to hard mode

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
 </head>
 <body>
-	<div class="main">
+	<div id="main">
 		<div>
-			<input type="button" value="C" class="button" id="clear"><div class="button" id="result">
+			<input type="button" value="C" class="button" id="clear"><div class="button" id="result"></div>
 		</div>
 		<div>
 			<input type="button" value="7" class="button"><input type="button" value="8" class="button"><input type="button" value="9" class="button"><input type="button" value="/" class="button" id="right">
